--- a/index.html
+++ b/index.html
@@ -26,17 +26,23 @@
 
   </div>
   <div class="container">
-    <div id="history">
-      <h2>History</h2>
-      <p> I studied history at university and specialized in archeology. </p>
+    <div class="card">
+      <div id="history">
+        <h2>History</h2>
+        <p> I studied history at university and specialized in archeology </p>
+      </div>
     </div>
-    <div id="chinese">
-      <h2>Chinese Culture</h2>
-      <p> I've been studying Chinese for a few years now! </p>
+    <div class="card">
+      <div id="chinese">
+        <h2>Chinese Culture</h2>
+        <p> I've been studying Chinese for a few years now! </p>
+      </div>
     </div>
-    <div id="cats">
-      <h2>Cats</h2>
-      <p>I am the proud owner of two cats</p>
+    <div class="card">
+      <div id="cats">
+        <h2>Cats</h2>
+        <p>I am the proud owner of two cats</p>
+      </div>
     </div>
   </div>
 
